--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section>
+        <div>
+            <h1><span class="orange-color">Skip</span> the Diet, <br> Just Eat Healthy With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
+        </div>
+        <div>
+            <img src="images/female/fn.png" alt="" srcset="">
+        </div>
+    </section>
 </body>
 
 </html>
