--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 <body>
     <section>
-        <div>
+        <div class="first-part">
             <h1><span class="orange-color">Skip</span> the Diet, <br> Just Eat Healthy With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
+            <a class="first-button" target="_blank" href="https://www.foodpanda.com">Order Food</a>
         </div>
-        <div>
+        <div class="first-part">
             <img src="images/female/fn.png" alt="" srcset="">
         </div>
     </section>
