--- a/index.html
+++ b/index.html
@@ -13,16 +13,25 @@
 </head>
 
 <body>
-    <section>
+    <section class="first-section">
         <div class="first-part">
             <h1><span class="orange-color">Skip</span> the Diet, <br> Just Eat Healthy With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
-            <a class="first-button" target="_blank" href="https://www.foodpanda.com">Order Food</a>
+            <a class="link-button" target="_blank" href="https://www.foodpanda.com">Order Food</a>
         </div>
         <div class="first-part">
             <img src="images/female/fn.png" alt="" srcset="">
         </div>
     </section>
-</body>
 
-</html>
+    <section class="second-section">
+        <div class="second-part">
+            <img src="images/female/Person Image.png" alt="" srcset="">
+        </div>
+        <div>
+            <h1>About Me</h1>
+            <p>A Food blog website that focuses on healthier choices and delicious meals.</p>
+            <a class="link-button" target="_blank" href="https://www.foodpanda.com">Contact Me</a>
+        </div>
+
+    </section>
