--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
         <div>
             <h1>About Me</h1>
             <p>A Food blog website that focuses on healthier choices and delicious meals.</p>
-            <a class="link-button" target="_blank" href="https://www.foodpanda.com">Contact Me</a>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/in/syed-asif-zobayer-a65102155/">Contact Me</a>
         </div>
-
     </section>
+
+    <footer class="footer">
+        <div class="footerdiv">
+            <h1><span class="orange-color">Food</span> Network</h3>
+                Eat healthy to live healthy. Live Healthy to live happy.
+        </div>
+    </footer>
+</body>
+
+</html>
