--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="footerdiv">
-            <h1><span class="orange-color">Food</span> Network</h3>
-                Eat healthy to live healthy. Live Healthy to live happy.
+    <footer>
+        <div class="container text-center">
+            <h3><span>FOOD </span>NETWORK</h3>
+            <p>Eat healthy to live healthy. Live healthy to live happy. <br> Copyright &copy; Asif Zobayer </p>
+
         </div>
     </footer>
+</body>
 </body>
 
 </html>
